--- a/Explore/Versioned_Project/.Versioned_Project.Project.json
+++ b/Explore/Versioned_Project/.Versioned_Project.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "ax5kd6eJCQ7eQPvtfYtUiA",
-    "name" : "Versioned_Project_Renamed",
+    "name" : "Versioned_Project",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-08-20T21:23:32.009Z",
+  "updateTime" : "2023-08-20T21:23:37.661Z",
   "objectRefs" : [ ]
 }
